<resources>
    <string name="app_name">农药进销存</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">农药进销存</string>
    <string name="title_activity_base_data">BaseDataActivity</string>
    <string name="title_activity_buy_catalog">BuyCatalogActivity</string>
    <string name="title_activity_sale_catalog">SaleCatalogActivity</string>
    <string name="title_activity_money_payment">MoneyPaymentActivity</string>
    <string name="title_activity_store_catalog">StoreCatalogActivity</string>
    <string name="title_activity_request_catalog">RequestCatalogActivity</string>
    <string name="title_activity_buy_catalog_add">BuyCatalogAddActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="firstsplash_welcome">您手中的农药专家</string>
    <string name="login_userid_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_submit_btn">登 录</string>
    <string name="login_error_network">没有网络存取点</string>
    <string name="login_error_password">用户ID及密码有错误</string>
    <string name="base_shop_title">经销商信息</string>
    <string name="base_user_title">权限配置</string>
    <string name="base_store_title">仓库管理</string>
    <string name="main_welcome_title">欢迎您！</string>
    <string name="main_base_title">基本资料</string>
    <string name="main_buy_title">进货管理</string>
    <string name="main_sale_title">销售管理</string>
    <string name="main_store_title">库存管理</string>
    <string name="main_payment_title">财务信息</string>
    <string name="main_request_title">产品申请</string>
    <string name="store_moving_title">移库</string>
    <string name="store_search_title">仓库查询</string>
    <string name="store_history_title">产品损耗</string>
    <string name="money_report_title">财务报表</string>
    <string name="money_payment_log_title">应付</string>
    <string name="money_payment_add_title">添加应收付</string>
    <string name="money_other_payment_title">收支统计</string>
    <string name="money_bank_cash_title">银行转账</string>
    <string name="sale_nongyao_title">销售开单</string>
    <string name="sale_reject_title">销售退货</string>
    <string name="sale_search_title">销售查询</string>
    <string name="money_cash_title">货币资金</string>
    <string name="money_manreport_title">老板一张表</string>
    <string name="pinyinjianma">拼音简码</string>
    <string name="lianxiren">联系人</string>
    <string name="zuojihaoma">座机号码</string>
    <string name="shoujihaoma">手机号码</string>
    <string name="jingxiaoshangmingcheng">经销商名称</string>
    <string name="ditu">地图</string>
    <string name="diqu">地区</string>
    <string name="common_success">成功</string>
    <string name="common_fail">失败</string>
    <string name="common_add">添 加</string>
    <string name="common_edit">修改</string>
    <string name="common_del">删除</string>
    <string name="common_ok">确定</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_close">关 闭</string>
    <string name="common_save">保 存</string>
    <string name="common_waiting">请稍等。。。</string>
    <string name="common_all">全部</string>
    <string name="common_no_image">失败装载照片</string>
    <string name="common_name">姓名</string>
    <string name="common_useridfull">用户名称</string>
    <string name="common_userid">名称</string>
    <string name="common_mobilephone">手机</string>
    <string name="common_password">密码</string>
    <string name="common_passwordconfirm">确认密码</string>
    <string name="common_mobilenum">手机号码</string>
    <string name="common_storename">仓库名称</string>
    <string name="common_storeman">仓库管理员</string>
    <string name="common_manager">管理员</string>
    <string name="common_role">权限</string>
    <string name="common_buying">进货</string>
    <string name="common_sale">销售</string>
    <string name="common_store">仓库</string>
    <string name="common_account">财务</string>
    <string name="common_incomeoutgo">收入/支出</string>
    <string name="common_income">收入</string>
    <string name="common_outgo">支出</string>
    <string name="common_date">日期</string>
    <string name="common_money">金额</string>
    <string name="common_reason">理由</string>
    <string name="common_startdate">开始日期</string>
    <string name="common_enddate">结束日期</string>
    <string name="common_customername">客户名称</string>
    <string name="common_givetakemoney">应收/应付</string>
    <string name="common_takemoney">应收</string>
    <string name="common_givemoney">应付</string>
    <string name="common_connectmethod">联系方式</string>
    <string name="common_yuan">元</string>
    <string name="common_todaystate">当日情况</string>
    <string name="common_monthstate">当月情况</string>
    <string name="common_yearstate">今年情况</string>
    <string name="common_profit">存利润</string>
    <string name="common_totalprofit">总利润</string>
    <string name="common_ticket">单号</string>
    <string name="common_supply">供应商</string>
    <string name="common_storeselect">仓库选择</string>
    <string name="common_paymode">购货方式</string>
    <string name="common_catalogname">产品名称</string>
    <string name="common_catalognumber">药品编号</string>
    <string name="common_standard">规格</string>
    <string name="common_price">价格</string>
    <string name="common_amount">数量</string>
    <string name="common_buy_amount">购买数量</string>
    <string name="common_totalprice">总价</string>
    <string name="common_barcode">条码</string>
    <string name="common_catalognum">产品编号</string>
    <string name="common_unit">单位</string>
    <string name="common_addcatalog">添加产品</string>
    <string name="common_operation">操作</string>
    <string name="common_curstore">当前仓库</string>
    <string name="common_deststore">目标仓库</string>
    <string name="common_remainamount">库存数量</string>
    <string name="common_usingreason">消耗理由</string>
    <string name="common_usingamount">消耗数量</string>
    <string name="common_actual">现金</string>
    <string name="common_bankpayment">银行转账</string>
    <string name="common_bill">赊购</string>
    <string name="common_send">赠送</string>
    <string name="common_pay">结账</string>
    <string name="common_customerphone">客户手机号</string>
    <string name="common_shop">经销商</string>
    <string name="common_saledate">销售日期</string>
    <string name="common_saledate1">开单日期</string>
    <string name="common_oneprice">单价</string>
    <string name="common_ticketnum">录入单号</string>
    <string name="common_paytypeselect">方式选择</string>
    <string name="common_paytype">支付方式</string>
    <string name="common_musttakemoney">应收金额</string>
    <string name="common_realtakemoney">实收金额</string>
    <string name="common_restmoney">抹零金额</string>
    <string name="common_restmoneybtn">零钱</string>
	<string name="common_org_standard">规格</string>
	<string name="common_pihao">批号</string>
	<string name="common_largenumber">产品批号</string>
	<string name="common_productdate">生产日期</string>
	<string name="common_mass1">克</string>
	<string name="common_mass2">毫升</string>
	<string name="common_saletype">销售类型</string>
	<string name="common_ticketnumcustomer">销售单号/\n客户名称</string>
	<string name="common_ticketnum1">单号</string>
	<string name="common_search">查询</string>
	<string name="common_mustgetmoney">应收金额</string>
	<string name="common_realgetmoney">实收金额</string>
	<string name="common_sale1">销售开单</string>
	<string name="common_salereject">退货</string>
	<string name="common_ticketinformation">单号详细信息</string>
	<string name="common_nongyaoname">农药名称</string>
	<string name="common_productstandard">产品规格</string>
	<string name="common_nongyaostandard">农药规格</string>
	<string name="common_nongyaolargenumber">农药批号</string>
	<string name="common_catapinyin_register">拼音简码/登记证号</string>
	<string name="common_catasearch">模糊查询</string>
	<string name="common_shop_position">定位我的店铺</string>
	<string name="common_saleincome">销售收入</string>
	<string name="common_saleorigin">销售成本</string>
	<string name="common_earn">利润</string>
	<string name="common_detail">明细</string>
	<string name="common_detailshow">查看</string>
	<string name="common_catalognum1">编号</string>
	<string name="common_description">说明</string>
	<string name="common_operator">操作员</string>
	<string name="common_remark">备注</string>
	<string name="common_inouttype">收支方式</string>
	<string name="common_bankmoney">银行存款</string>
	<string name="common_sum">合计</string>
	<string name="common_detailtype">明细类型</string>
	<string name="common_moneyinoutsum">现金收入支出\n合计</string>
	<string name="common_bankinoutsum">银行转账合计</string>
	<string name="common_inoutsum">资金总计</string>
	<string name="common_statisticstartdate">统计开始日期</string>
	<string name="common_statisticenddate">统计结束日期</string>
	<string name="common_statistic">统计</string>
	<string name="common_buyingstatistic">采购情况</string>
	<string name="common_salestatistic">销售情况</string>
	<string name="common_storeremainstatistic">库存调拨情况</string>
	<string name="common_loststatistic">报损报溢情况</string>
	<string name="common_storestatistic">库存状况</string>
	<string name="common_moneystatistic">财务分析</string>
	<string name="common_givetakestatistic">付款收款情况</string>
	<string name="common_buyingstatistictable">采购情况表</string>
	<string name="common_salestatistictable">销售情况表</string>
	<string name="common_storeremainstatistictable">库存调拨情况表</string>
	<string name="common_loststatistictable">报损报溢情况表</string>
	<string name="common_storestatistictable">库存状况表</string>
	<string name="common_moneystatistictable">财务分析表</string>
	<string name="common_givetakestatistictable">付款收款情况表</string>
	<string name="common_buyingstatistic_header1">采购数量</string>
	<string name="common_buyingstatistic_header2">采购金额</string>
	<string name="common_buyingstatistic_header3">退货数量</string>
	<string name="common_buyingstatistic_header4">退货金额</string>
	<string name="common_buyingstatistic_header5">总数量</string>
	<string name="common_buyingstatistic_header6">总金额</string>
	<string name="common_salestatistic_header1">销售数量(Kg)</string>
	<string name="common_salestatistic_unit">单位：Kg</string>
	<string name="common_salestatistic_header2">销售金额</string>
	<string name="common_salestatistic_header3">退货数量</string>
	<string name="common_salestatistic_header4">退货金额</string>
	<string name="common_salestatistic_header5">总数量</string>
	<string name="common_salestatistic_header6">总金额</string>
	<string name="common_storeremainstatistic_header1">调出数量</string>
	<string name="common_storeremainstatistic_header2">调入数量</string>
	<string name="common_loststatistic_header1">报损数量</string>
	<string name="common_loststatistic_header2">报损金额</string>
	<string name="common_loststatistic_header3">报溢数量</string>
	<string name="common_loststatistic_header4">报溢金额</string>
	<string name="common_storestatistic_header1">库存总量</string>
	<string name="common_storestatistic_header2">库存总价</string>
	<string name="common_givetakestatistic_header1">应收合计</string>
	<string name="common_givetakestatistic_header2">应付合计</string>
	<string name="common_moneystatistic_header1">销售金额</string>
	<string name="common_moneystatistic_header2">销售成本</string>
	<string name="common_moneystatistic_header3">销售利润</string>
	<string name="common_historyinformation">历史信息</string>
	<string name="common_find">搜索</string>
	<string name="common_mustpaytaketype">收款/付款方式</string>
	<string name="common_rest">抹零</string>
	<string name="common_contentsummary">内容摘要</string>
	<string name="common_givetakemoney1">应收/应付金额</string>
	<string name="common_realgivetake">实收/实付</string>
	<string name="common_realtake">实收</string>
	<string name="common_realgive">实付</string>
	<string name="common_shopname">经销商名称</string>
	<string name="common_shoppermitnum">农药经营许可证号</string>
	<string name="common_nongyaousingname">农药通用名</string>
	<string name="common_point">摘要</string>
    <string name="request_catalog_note">注：只有高毒经销商可以经营高毒产品，低毒经销商默认否，切不能更改</string>
    <string name="error_required_name">必须要姓名</string>
    <string name="error_required_userid">必须要名称</string>
    <string name="error_required_useridfull">必须要用户名称</string>
</resources>