<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_item_buycatalog_row"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_table_height"
        android:background="@color/color_white" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:background="@color/common_line" >
            </LinearLayout>

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_item_buycata_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:text="@string/common_catalogname"
                android:textColor="@color/common_table_view_text"
                android:textSize="@dimen/common_table_view_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/common_line" >

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_item_buycata_standard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:text="@string/common_standard"
                android:textColor="@color/common_table_view_text"
                android:textSize="@dimen/common_table_view_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/common_line" >
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_item_buycata_price"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:text="@string/common_price"
                android:textColor="@color/common_table_view_text"
                android:textSize="@dimen/common_table_view_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/common_line" >

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_item_buycata_amount"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:text="@string/common_amount"
                android:textColor="@color/common_table_view_text"
                android:textSize="@dimen/common_table_view_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/common_line" >

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_item_buycata_totalprice"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:text="@string/common_totalprice"
                android:textColor="@color/common_table_view_text"
                android:textSize="@dimen/common_table_view_size" />

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="@color/common_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line" >
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>