<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_dialog_datepicker"
        android:layout_width="@dimen/common_datepicker_dialog_width"
        android:layout_height="@dimen/common_datepicker_dialog_height"
        android:background="@drawable/back_dialog_delconfirm"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/fl_dialog_datepicker_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@drawable/back_dialog_delconfirm1" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/txt_dialog_datepicker_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/common_date"
                android:textColor="@color/color_white"
                android:textSize="@dimen/common_popup_dialog_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/common_line"
                android:orientation="vertical" >
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="190"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="10" >
                </LinearLayout>

                <DatePicker
                    android:id="@+id/dp_dialog_datepicker_date"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="200"
                    android:foregroundGravity="center_vertical|center_horizontal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="10" >
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5" >
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_dialog_datepicker_okbtn"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="60" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/button_green" />

                    <com.damy.Utils.AutoSizeTextView
                        android:id="@+id/autoSizeTextView3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/common_ok"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/common_popup_dialog_size" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="30" >
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_dialog_datepicker_cancelbtn"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="60" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/button_gray" />

                    <com.damy.Utils.AutoSizeTextView
                        android:id="@+id/txt_item_salecatalog_standardname"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/common_cancel"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/common_popup_dialog_size" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>